# Secure-Code-AI_Inspector

./: .env.example  .gitignore  README.md  prompt_log.md  pyproject.toml  requirements.txt  web_app.py
configs/: pipeline.yaml  profile.yaml  scope.juiceshop.yaml
data/: owasp_top10.yaml  secure_coding_rules.md
prompts/: few_shot_examples.json
prompts/agents/: access_control_specialist.md  aggregator.md  extra_category_specialist.md  injection_specialist.md  verifier.md
scripts/: cleanup_local.ps1  generate_submission_docs.py
src/secure_inspector/: __init__.py  __main__.py  chunker.py  cli.py  config.py  llm_client.py  models.py  prompts.py  reporting.py  scanner.py  services.py  web_utils.py
src/secure_inspector/agents/: __init__.py  access_control_specialist.py  aggregator.py  common.py  extra_category_specialist.py  injection_specialist.py  verifier.py
src/secure_inspector/baseline/: __init__.py  semgrep_runner.py
src/secure_inspector/eval/: __init__.py  metrics.py
tests/: test_chunker.py  test_config.py  test_llm_client.py  test_metrics.py  test_services.py  test_web_utils.py
